Fix the issue of links in dark mode

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,63 +4,57 @@
 /*! purgecss end ignore */
 @tailwind utilities;
 .gatsby-resp-image-wrapper {
-
-    margin:  1.5rem 0;
+  margin: 1.5rem 0;
 }
-p + .gatsby-resp-image-wrapper  {
-color: rgba(117, 117, 117, 1);
-    font-weight: 300;
-    line-height: 20px;
-    font-size: 16px;
-    text-align: center;}
+p + .gatsby-resp-image-wrapper {
+  color: rgba(117, 117, 117, 1);
+  font-weight: 300;
+  line-height: 20px;
+  font-size: 16px;
+  text-align: center;
+}
 
-    .blog-page  .gatsby-image-wrapper img {
-   
-        border-radius: 4px;
-        box-shadow: 0 1px 2px rgba(0,0,0,.05), 0 10px 20px rgba(0,0,0,.05);
-        margin-bottom: 20px;
-        transition: .8s cubic-bezier(.2,.8,.2,1);
-    }
-   
+.blog-page .gatsby-image-wrapper img {
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 10px 20px rgba(0, 0, 0, 0.05);
+  margin-bottom: 20px;
+  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
 
-    @media only screen and (max-width: 600px) {
-        .contact-page {
+@media only screen and (max-width: 600px) {
+  .contact-page {
+    grid-template-columns: 1fr !important;
+  }
+}
 
-            grid-template-columns: 1fr !important 
-        }
-      }
-  
+.dark-theme .contact-page input,
+.dark-theme .contact-page select,
+.dark-theme .contact-page textarea {
+  background-color: black !important;
+  color: #fff !important;
+}
+.dark-theme .contact-page button {
+  background-color: white !important;
+  color: #000 !important;
+}
 
-      .dark-theme .contact-page input, .dark-theme .contact-page select,  .dark-theme .contact-page textarea  {
+.dark-theme .testimonials-item {
+  color: #000 !important;
+}
 
-        background-color: black !important;
-        color: #fff !important;
-      }
-      .dark-theme .contact-page button{
+.dark-theme p > a {
+  color: #fff !important ;
+}
 
-        background-color: white !important;
-        color:#000 !important
-      }
+.dark-theme blockquote,
+.dark-theme blockquote a {
+  color: #000 !important;
+}
 
+.light-theme {
+  background-color: #f7fbfc;
+}
 
-      .dark-theme  .testimonials-item {
-        color:#000 !important
-
-      }
-
-
-    .dark-theme p > a {
-        color: #fff !important ;
-    }
-    
-    .dark-theme  blockquote,  .dark-theme  blockquote a  {
-      color:#000 !important
-
-    }
-
-
-
-    .light-theme {
-      background-color: #f7fbfc;
-    }
-    
+.dark-theme a {
+  color: #fff !important;
+}
